# techniki-inteligentnej-analizy-danych

./: .gitignore  25 Z-thesisexport-20250512_0334.xlsx.docx  main.py  pyproject.toml  test.docx  ~$ Z-thesisexport-20250512_0334.xlsx.docx
static/: style.css
task-1/: .gitignore  main.py  pyproject.toml
task-1/templates/: index.html
templates/: index.html
